--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ numpy==1.24.0
 opencv-contrib-python==4.6.0.66
 opencv-python==4.6.0.66
 PyAudio==0.2.11
-pygame==2.1.3.dev8
+pygame
 speechrecognition==3.9.0
